--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,8 @@
 }
 
 body{
-    background-image: url("../farhan-khan-CFbVdWD1RiI-unsplash.jpg");
+    height: 100vh;
+    background-image: url("../mosique.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }.tebl-wrap{
