--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,13 @@
 }
 
 body{
-    height: auto;
     background-image: url("../mosique.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
-}.tebl-wrap{
+}
+.tebl-wrap{
     background-color: #ccbebed8;
 }
 .table{
