--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,62 @@
-.item{
-    width: 100%;
-    max-width: 120px;
-    height: 120px;
-    color: #080000;
-    border-radius: 50%;
-    /* background-color: #fff6f6; */
-    background-image: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
-    border: 3px solid #c2bcbc;
+/* athiti-regular - latin */
+@font-face {
+    font-family: 'Athiti';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/athiti-v12-latin-regular.woff2') format('woff2'), 
+    url('../fonts/athiti-v12-latin-regular.woff') format('woff'); 
+}
+/* athiti-600 - latin */
+@font-face {
+    font-family: 'Athiti';
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+    url('../fonts/athiti-v12-latin-600.woff2') format('woff2'), 
+    url('../fonts/athiti-v12-latin-600.woff') format('woff');
 }
 
 body{
-    background-image: url("../mosique.jpg");
-    background-attachment: fixed;
+    background-color: #e0e0e6;
+    font-family: 'Athiti', sans-serif;
+}
+.item{
+    width: 100%;
+    max-width: 130px;
+    height: 250px;
+    color: #080000;
+    border-radius: 10px;
+    box-shadow: rgba(104, 100, 100, 0.15) 0px 15px 25px, rgba(252, 250, 250, 0.05) 0px 5px 10px;
+}
+.list{
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+.title-content-wrap{
+    background-color: #fff
+}
+.week-rotaete{
+    writing-mode: vertical-rl;
+    display: inline-flex;
+}
+.icon-calendar-th{
+    max-width: 35px;
+    height: 20px;
+    background-image: url("../images/calendar.svg");
     background-position: center;
-    background-size: cover;
+    background-size: 15px ;
     background-repeat: no-repeat;
 }
 .tebl-wrap{
-    background-color: #ccbebed8;
+    background-color: #fff;
+    padding: 15px;
+}
+.table-tr-wrap{
+    height: 35px;
+    color: #555555;
 }
 .table{
     font-size: 9px;
@@ -32,49 +70,31 @@ body{
 .title-region{
     font-size: 28px;
 }
-.time-date{
-font-size: 20px;
-font-weight: 600;
-}
-.weekday{
-font-size: 18px;
-font-weight: 600;
-}
-
 .btn-prayer {
-    align-items: center;
-    appearance: none;
     background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
-    cursor: pointer;
-    height: 40px;
-    line-height: 1;
-    padding-left: 16px;
-    padding-right: 16px;
-    transition: box-shadow .15s,transform .15s;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
-.btn-prayer:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-.btn-prayer:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-}
-
-@media only screen and (min-width:550px){
+/* MEDIA QUERY  */
+@media only screen and (min-width:768px){
     .table{
         font-size: 16px;
     }
-    .item{
-        max-width: 150px;
-        height: 150px;
+    .week-rotaete{
+        writing-mode: horizontal-tb;
+    }
+    .time-date{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .weekday{
+        font-size: 18px;
+        font-weight: 600;
+    }
+    .tebl-wrap{
+        padding: 25px;
+    }
+    .icon-calendar-th{
+        background-size: 20px;
     }
 }
