--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body{
     max-width: 130px;
     height: 250px;
     color: #080000;
+    /* background-color: #fff; */
     border-radius: 10px;
     box-shadow: rgba(104, 100, 100, 0.15) 0px 15px 25px, rgba(252, 250, 250, 0.05) 0px 5px 10px;
 }
@@ -75,6 +76,12 @@ body{
     box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
+.header-time{
+    font-size: 15px;
+}
+.header-titile-time{
+    font-size: 15px;
+}
 /* MEDIA QUERY  */
 @media only screen and (min-width:768px){
     .table{
@@ -96,5 +103,11 @@ body{
     }
     .icon-calendar-th{
         background-size: 20px;
+    }
+    .header-time{
+        font-size: 23px;
+    }
+    .header-titile-time{
+        font-size: 23px;
     }
 }
