--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body{
 .navbar-nav-item{
     padding: 5px;
     margin-top: 15px;
-    background-color: #d0d6cecb;
+    background-color: #e0e0e6;
 }
 
 .res-navbar-link{
