--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,73 @@
     url('../fonts/athiti-v12-latin-600.woff2') format('woff2'), 
     url('../fonts/athiti-v12-latin-600.woff') format('woff');
 }
+
+/* loder */
+.loder{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    transition: all .5s ease;
+    z-index: 1111;
+    background: #fff;
+}
+.loderspan{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    border: 3px solid #e38528;
+    border-top-color: transparent ;
+    border-radius: 50%;
+    animation: loder 1s linear infinite;
+    position: relative;
+}
+.lodermiddil{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: absolute;
+    border: 2px solid black;
+    border-left-color: transparent;
+    animation: loder2 linear .5s infinite;
+}
+@keyframes loder {
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes loder2 {
+    100%{
+        transform: rotate(-360deg);
+    }
+}
+/* loder end */
+
 body{
     background-color: #e0e0e6;
     font-family: 'Athiti', sans-serif;
     box-sizing: border-box;
+}
+.btn-top{
+    position: fixed;
+    bottom: 40px;
+    right: 10px;
+    z-index: 11;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #fff;
+    background-image: url("../images/top-btn.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 25px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .body-show{
     overflow: hidden;
@@ -37,11 +100,11 @@ body{
     font-size: 18px;
 }
 .navbar-nav-item{
-    padding: 5px;
+    padding: 5px 10px;
     margin-top: 15px;
     background-color: #e0e0e6;
+    border-radius: 2px;
 }
-
 .res-navbar-link{
     color: #080000;
 }
@@ -126,6 +189,7 @@ body{
     right: 0;
     bottom: 0;
     overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 .prayer-text-list{
     border-radius: 10px;
@@ -192,7 +256,6 @@ body{
 .btn-menu-wrap{
     display: flex;
 }
-
 
 /* MEDIA QUERY  */
 @media only screen and (min-width:768px){
