--- a/css/main.css
+++ b/css/main.css
@@ -71,11 +71,11 @@ body{
 }
 .btn-top{
     position: fixed;
-    bottom: 40px;
+    bottom: 10px;
     right: 10px;
     z-index: 11;
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     background-color: #fff;
     background-image: url("../images/top-btn.svg");
@@ -208,20 +208,6 @@ body{
 .view-audio-text{
     text-transform: capitalize;
 }
-/* .audio-link{
-    text-align: center;
-    margin-top: 30px;
-    width: 180px;
-    height: 100px;
-    background-color: #FCFCFD;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
-    background-image: url("../images/quran-imagess.png");
-    background-position: calc(50%) calc(50% + 15px);
-    background-size: 80px;
-    background-repeat: no-repeat;
-    border-radius: 10px;
-    display: inline-block;
-} */
 .audio-prayer-time{
     background-image: url("../images/time-img.png");
 }
@@ -237,7 +223,6 @@ body{
 .audio-m{
     /* visibility: hidden; */
 }
-
 
 /* FATH  */
 .faith-blok{
@@ -294,6 +279,9 @@ body{
     .faith-item{
         font-size: 28px;
         font-weight: bold;
+    }
+    .btn-top{
+        right: 20px;
     }
 }
 
